@@ -849,7 +849,7 @@ PORT mcs51_port =
     NULL,
   },
   /* Sizes: char, short, int, long, long long, near ptr, far ptr, gptr, func ptr, banked func ptr, bit, float, _BitInt (in bits) */
-  { 1, 2, 2, 4, 8, 1, 2, 3, 2, 3, 1, 4, 0 },
+  { 1, 2, 2, 4, 8, 1, 2, 3, 2, 3, 1, 4, 32 },
   /* tags for generic pointers */
   { 0x00, 0x40, 0x60, 0x80 },   /* far, near, xstack, code */
   {
